For a documentation of all features, see http://semantic-mediawiki.org


== SMW 1.7.1 ==

THIS IS NOT A RELEASE YET 

Semantic MediaWiki 1.7.1 is currently in beta-quality and is not recommended for use in
production until the actual release.

* Fixed fatal error occurring for some invalid property definitions (bug 33652).
* Fixed error in RSS when using creator or date parameters (bug 33721).

== SMW 1.7.0.1 ==

Released on January 9, 2012.

* Fixed bug in "further results" links causing the main column to be displayed twice on Special:Ask (bug 33473).
* Fixed incorrect case-sensitivity of the format parameter (bug 31138).
* Fixed internationalization of magic words.
* Fixed offset and limit value in further results links (bug 33575).

== SMW 1.7 ==

Released on January 1, 2012.

* Added native "internal objects" that can be set using #subobject.
* Added support for selecting a default graph when using RDF stores,
  configuration called $smwgSparqlDefaultGraph
* Use of native MediaWiki sortable tables for the table formats.
* Added value distribution functionality that can be used by result formats. 
* Added validation and manipulation of the 'format' parameter using Validator.
* Added 'class' parameter to the 'table' format, which allows setting the CSS
  class.
* Added automatically-generated CSS classes for rows and cells in 'table' format.
* Added alpha version of native SMW Ask API with modules 'ask' and 'askargs'.
* Added alpha version of a new ask query interface: Special:QueryCreator.
* Added setting to choose which optional special properties are enabled ($smwgPageSpecialProperties).
* Added creation date special property (disabled by default) (bug 32165).
* Added support for altitudes in geographic coordinates (bug 32698).
* Added definitions for missing params (sort, order, searchlabel) to the base query printer.
* Added automatic invocation of the SMW_setup maintenance script when running
  update.php (for MW >= 1.19).